Closed
Bug 888235
Opened 12 years ago
Closed 12 years ago
Use CSSIntSize for nsGlobalWindow::GetInnerWidth/Height
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla25
People
(Reporter: Ms2ger, Assigned: Ms2ger)
References
Details
Attachments
(1 file, 1 obsolete file)
6.84 KB,
patch
|
mrbkap
:
review+
kats
:
feedback+
|
Details | Diff | Splinter Review |
No description provided.
Attachment #768896 -
Flags: review?(bugmail.mozilla)
Assignee | ||
Comment 1•12 years ago
|
||
Now with build fixes
Attachment #768896 -
Attachment is obsolete: true
Attachment #768896 -
Flags: review?(bugmail.mozilla)
Attachment #768902 -
Flags: review?(bugmail.mozilla)
Comment 2•12 years ago
|
||
Comment on attachment 768902 [details] [diff] [review]
Patch v1.1
Review of attachment 768902 [details] [diff] [review]:
-----------------------------------------------------------------
This looks fine to me but I don't think I'm qualified to review changes to nsGlobalWindow. I don't understand the FORWARD_TO_OUTER business well enough.
Attachment #768902 -
Flags: review?(bugmail.mozilla) → feedback+
Assignee | ||
Updated•12 years ago
|
Attachment #768902 -
Flags: review?(mrbkap)
Comment 3•12 years ago
|
||
Comment on attachment 768902 [details] [diff] [review]
Patch v1.1
Review of attachment 768902 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/base/nsGlobalWindow.cpp
@@ +10838,5 @@
>
> void
> nsGlobalWindow::EnsureSizeUpToDate()
> {
> + MOZ_ASSERT(IsOuterWindow());
Nit: add a blank line under this assertion.
Attachment #768902 -
Flags: review?(mrbkap) → review+
Assignee | ||
Comment 4•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•